# heavens-arena

./: .gitignore  404.html  README.md  index.html  repositories_info.json
.github/workflows/: build-and-test.yml  get-repositories-from-organization.yml
docs/explanation/: index.html
docs/how-to-guides/: index.html
docs/tutorials/: index.html
incometax-project/: prospector.yaml  pyproject.toml
incometax-project/incometax/: __main__.py
incometax-project/incometax/src/tax_compute_strategy/: old_tax_compute_strategy.py
incometax-project/incometax/src/utils/: __init__.py
incometax-project/incometax/tests/tax_compute_strategy/: test_tax_compute_strategy.py
python/modules/: main.py
python/modules/answer/deep/: answer_provider.py
python/modules/message/: message_provider.py
reference/incometax/: index.html
reference/incometax/tax_compute_strategy/: index.html
reference/incometax/tax_compute_strategy/old_tax_compute_strategy/: index.html
reference/incometax/utils/: index.html
search/: search_index.json
sources/: README.puml
