[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name ="incometax"
version = "0.0.1"
dependencies = [
    "pytest",
    "prospector[with_everything]",
]

[tool.setuptools.packages.find]
where = [
    "incometax/src"
]

[tool.pytest.ini_options]
pythonpath = [
    "incometax/src"
]
